8292609: Cherry-pick WebKit 614.1 stabilization fixes

Reviewed-by: kcr, arapte, jvos